--- a/.github/workflows/update_kodinerds.yml
+++ b/.github/workflows/update_kodinerds.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          commit-message: Update CoreELEC/LibreELEC.tv
-          branch: bot-update-ce-le
+          commit-message: Update Kodinerds samples
+          branch: bot-update-kodinerds
           delete-branch: true
           title: '[Bot] Update kodinerds channels'
           labels: |
